# paheko-joachim

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  config.local.php  docker-compose.yml  pyproject.toml  sync_caisse.php
.github/: release.yml  renovate.json5  zizmor.yml
.github/workflows/: deploy-doc.yml  package-modules.yml  tests.yml
doc/: index.html
doc-tools/: bootstrap-instance.php  package.json  regen-screenshots.sh  screenshots.mjs  screenshots.py  seed-demo.php
doc/suivi_cheques/: guide.html
modules/suivi_cheques/: _doc_footer.html  _list.html  _list_page.html  _month_options.html  _replacement_children_fields.html  _replacement_children_save.html  _replacement_methods_fields.html  _tabs.html  cheque.schema.json  config.html  deposit.html  edit.html  edit_replacement.html  exercise.html  index.html  module.ini  to_record.html  upcoming.html
modules/suivi_cheques/snippets/: user_details.html
paheko-test/: Dockerfile  config.local.php  docker-compose.yml  run.sh
suivi_cheques/: README.md  _list.html  deposit.html  deposit_batch.schema.json  method_month_map.schema.json  module.ini  replacement.schema.json  to_record.html  upcoming.html
tests/: conftest.py  pyproject.toml
tests/suivi_cheques/: test_edit.py  test_money_paths.py  test_smoke.py
